--- a/src/layouts/Homepage/index.scss
+++ b/src/layouts/Homepage/index.scss
@@ -3,4 +3,9 @@
 .homepage {
     max-width: 850px;
     margin: auto;
+    padding-top: 2em;
+}
+#submitForm {
+    text-align: center;
+    padding: 1em;
 }
