--- a/src/layouts/Homepage/index.scss
+++ b/src/layouts/Homepage/index.scss
@@ -3,7 +3,7 @@
 .homepage {
     max-width: 850px;
     margin: auto;
-    padding-top: 2em;
+    padding: 2em 1em 0 1em;
 }
 #submitForm {
     text-align: center;
