--- a/src/components/KnightecCard/index.scss
+++ b/src/components/KnightecCard/index.scss
@@ -1,3 +1,98 @@
 @import "../../styles/_variables";
 @import "../../styles/_fonts";
 @import "../../styles/global";
+
+.contact-card {
+    position: relative;
+    margin: 30px auto;
+    width: 300px;
+    height: 300px;
+    border-radius: 40px;
+    box-shadow: 5px 5px 30px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.22);
+    transition: 0.4s;
+  
+    &:hover {
+      transform: scale(0.9, 0.9);
+      box-shadow: 5px 5px 30px 15px rgba(0,0,0,0.25), 
+        -5px -5px 30px 15px rgba(0,0,0,0.22);
+    }
+    
+    p {
+      margin: 0;
+    }
+  
+    .card-image {
+      width: inherit;
+      height: inherit;
+      border-radius: 40px;
+      background-color: gray;
+  
+      img {
+        width: inherit;
+        height: inherit;
+        border-radius: 40px;
+        object-fit: cover;
+        object-position: top;
+        filter: gray; /* IE5+ */
+            -webkit-filter: grayscale(1); /* Webkit Nightlies & Chrome Canary */
+            -webkit-transition: all .8s ease-in-out; 
+  
+        &:hover {
+          filter: none;
+          -webkit-filter: grayscale(0); //svart filter med opacitet?
+        }
+  
+      }
+  
+    }
+  
+    .card-title {
+      top: 210px;
+      position: absolute;
+      text-align: right;
+      width: 100%;
+      height: 90px;
+      background-color: rgba(0,0,0, 0.6);
+      border-radius: 0 0 40px 40px;
+  
+      .card-text {
+        margin: 2px 0 0 20px !important;
+        text-align: left;
+  
+        .card-name {
+          color: $melon;
+          font-weight: 100;
+          font-size: 20px;
+        }
+      
+        .title {
+          color: white;
+          font-size: 14px;
+        }
+
+        .description{
+            color: white;
+        }
+  
+        .linkedin-logo{
+          position: absolute;
+          margin: 4px 10px 1px 10px;
+          text-align: right;
+          width: 18px;
+          height: 18px;
+          opacity: 0.9;
+          filter: gray;
+          -webkit-filter: grayscale(1);
+          -webkit-transition: all .3s ease-in-out; 
+  
+          &:hover {
+            filter: none;
+            -webkit-filter: grayscale(0);
+          }
+  
+        }
+  
+      }
+    }
+    
+  }
