--- a/src/components/KnightecCard/index.scss
+++ b/src/components/KnightecCard/index.scss
@@ -2,25 +2,37 @@
 @import "../../styles/_fonts";
 @import "../../styles/global";
 
-.contact-card {
+.speaker-card {
     position: relative;
     margin: 30px auto;
-    width: 300px;
-    height: 300px;
+    margin-left: 5px;
+    margin-right: 5px;
+    width: 280px;
+    height: 280px;
     border-radius: 40px;
     box-shadow: 5px 5px 30px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.22);
-    transition: 0.4s;
+    // transition: 0.4s;
+    //perspective: 1000px;
   
-    &:hover {
-      transform: scale(0.9, 0.9);
+    /* &:hover {
+      transform: scale(1.01, 1.01);
       box-shadow: 5px 5px 30px 15px rgba(0,0,0,0.25), 
         -5px -5px 30px 15px rgba(0,0,0,0.22);
-    }
+    } */
     
     p {
       margin: 0;
     }
-  
+  .flip-card-inner{
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 0s;
+    transform-style: preserve-3d;
+    
+
+  .card-front{
     .card-image {
       width: inherit;
       height: inherit;
@@ -33,25 +45,23 @@
         border-radius: 40px;
         object-fit: cover;
         object-position: top;
-        filter: gray; /* IE5+ */
-            -webkit-filter: grayscale(1); /* Webkit Nightlies & Chrome Canary */
-            -webkit-transition: all .8s ease-in-out; 
+        // filter: gray; /* IE5+ */
+         //   -webkit-filter: grayscale(1); /* Webkit Nightlies & Chrome Canary */
+          //  -webkit-transition: all .8s ease-in-out;  
   
-        &:hover {
+        /* &:hover {
           filter: none;
           -webkit-filter: grayscale(0); //svart filter med opacitet?
-        }
+        } */
   
       }
-  
     }
-  
     .card-title {
       top: 210px;
       position: absolute;
       text-align: right;
       width: 100%;
-      height: 90px;
+      height: 70px;
       background-color: rgba(0,0,0, 0.6);
       border-radius: 0 0 40px 40px;
   
@@ -69,30 +79,62 @@
           color: white;
           font-size: 14px;
         }
-
-        .description{
-            color: white;
         }
-  
-        .linkedin-logo{
-          position: absolute;
-          margin: 4px 10px 1px 10px;
-          text-align: right;
-          width: 18px;
-          height: 18px;
-          opacity: 0.9;
-          filter: gray;
-          -webkit-filter: grayscale(1);
-          -webkit-transition: all .3s ease-in-out; 
-  
-          &:hover {
-            filter: none;
-            -webkit-filter: grayscale(0);
-          }
-  
-        }
-  
       }
     }
+
+.card-back{
+    transform: rotateY(180deg);
+    background-color: #2d2d2c;
+    border-radius: 40px;
+      
+    .card-back-name{
+        color: white;
+        text-align: center;
+        color: $melon;
+        font-weight: 100;
+        font-size: 20px;
+    }
     
+    .description{
+        width: 100%;
+        height: 70%;
+        color: white;
+        padding-top: 20px;
+        padding: 10px;
+        font-size: 16px;
+        text-align: left;
+        
+    }
+    .linkedin-logo{
+        position: absolute;
+        margin: 4px 10px 1px 10px;
+        text-align: right;
+        width: 25px;
+        height: 25px;
+        opacity: 0.9;
+        /* filter: gray;
+        -webkit-filter: grayscale(1);
+        -webkit-transition: all .3s ease-in-out; 
+
+        &:hover {
+          filter: none;
+          -webkit-filter: grayscale(0);
+        } */
+    }
+    }
+    }
+  }
+
+  .speaker-card:hover .flip-card-inner {
+    transform: rotateY(180deg);
+  }
+  
+  /* Position the front and back side */
+  .card-front, .card-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden; /* Safari */
+    backface-visibility: hidden;
   }
