--- a/src/components/KnightecCard/index.scss
+++ b/src/components/KnightecCard/index.scss
@@ -125,7 +125,14 @@
     }
     }
     }
+    
   }
+  .mobile-description{
+    display: none;
+}
+  .m-description{
+    display: none;
+}
 
   .speaker-card:hover .flip-card-inner {
     transform: rotateY(180deg);
@@ -161,11 +168,13 @@
     }
     .mobile-description{
         padding-bottom: 35px;
+        display: block;
     }
     .m-description{
         text-align: center;
         margin-bottom: 0px;
         padding-bottom: 0px;
+        display: block;
     }
 
    
