--- a/src/components/KnightecSpeakers/index.scss
+++ b/src/components/KnightecSpeakers/index.scss
@@ -47,7 +47,6 @@
 .image-speakers2{
     width: 30%;
     
-    
 
     .images2{
         border-radius: 50%;
@@ -57,7 +56,7 @@
         display: block;
         margin: auto;
         padding: 5px;
-        margin-top: 10px;
+        margin-bottom: 20px;
     }
 }
 }
