added images and fixed standard image

--- a/src/components/KnightecCard/index.scss
+++ b/src/components/KnightecCard/index.scss
@@ -37,7 +37,11 @@
       width: inherit;
       height: inherit;
       border-radius: 40px;
-      background-color: gray;
+      background-color: white;
+      background-image: url('/assets/armada_round_logo_green.png');
+      background-size: 280px 280px;
+      
+      
   
       img {
         width: inherit;
