fixed chrome-stuff and took away linkedin

--- a/src/components/KnightecSpeakers/index.scss
+++ b/src/components/KnightecSpeakers/index.scss
@@ -72,6 +72,7 @@
         width: 80%;
         height: 0px;
         background-color: white;
+        margin-bottom: 30px;
       }
     .event-description {
         margin-left: 15px;
