--- a/src/components/KnightecCard/index.scss
+++ b/src/components/KnightecCard/index.scss
@@ -103,11 +103,12 @@
     
     .description{
         width: 100%;
-        height: 70%;
+        height: 55%;
         color: white;
-        padding-top: 20px;
-        padding: 15px;
-        font-size: 16px;
+        padding-top: 15px;
+        padding-left: 15px;
+        padding-right: 15px;
+        font-size: 15px;
         text-align: left;
         
     }
@@ -126,6 +127,7 @@
           filter: none;
           -webkit-filter: grayscale(0);
         } */
+      
     }
     }
     }
@@ -143,7 +145,7 @@
   }
   
   /* Position the front and back side */
-  .card-front, .card-back {
+  .card-front, .card-back, .card-title {
     position: absolute;
     width: 100%;
     height: 100%;
