--- a/src/components/KnightecCard/index.scss
+++ b/src/components/KnightecCard/index.scss
@@ -61,17 +61,17 @@
       }
     }
     .card-title {
-      top: 210px;
+      top: 200px;
       position: absolute;
       text-align: right;
       width: 100%;
-      height: 70px;
-      background-color: rgba(0,0,0, 0.6);
+      height: 80px;
+      background-color: rgba(0, 0, 0, 0.7);
       border-radius: 0 0 40px 40px;
   
       .card-text {
         margin: 2px 0 0 20px !important;
-        text-align: left;
+        text-align: center;
   
         .card-name {
           color: $melon;
@@ -82,6 +82,11 @@
         .title {
           color: white;
           font-size: 14px;
+        }
+        .edu-title{
+          color: white;
+          font-size: 13px;
+
         }
         }
       }
