--- a/src/components/PagePreview/index.scss
+++ b/src/components/PagePreview/index.scss
@@ -28,8 +28,8 @@
             color: #fff;
             font-family: $font-title;
             text-align: center;
-            width: 3em;
-            height: 2em;
+            width: 4em;
+            height: 3.5em;
             font-size: 0.8em;
             box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.1);
         }
@@ -75,14 +75,14 @@
 
         .ingress, .description {
             font-size: 0.85em;
-            margin-top: 1em 0em;
+            margin-top: 0em;
             line-height: 1.2;
             
             overflow: hidden;
             text-overflow: ellipsis;
             display: -webkit-box;
-            line-clamp: 3;
-            -webkit-line-clamp: 3;
+            line-clamp: 2;
+            -webkit-line-clamp: 2;
             -webkit-box-orient: vertical;
         }
     }
