--- a/src/layouts/DiversityPage/index.scss
+++ b/src/layouts/DiversityPage/index.scss
@@ -33,8 +33,13 @@
     h2,
     h3,
     h4,
-    p {
+    p,
+    a {
         color: #fff;
+    }
+
+    a {
+        text-decoration: underline;
     }
 }
 
