--- a/src/components/Jumbotron/index.scss
+++ b/src/components/Jumbotron/index.scss
@@ -23,6 +23,27 @@
         }
     }
 }
+.virtualbutton {
+    width: 220px;
+    height: 60px;
+    display: inline-block;
+    margin: 0px;
+    padding: 0px;
+    background-color: #FFFFFF;
+    color: #000000;
+    border-radius: 5px;
+    font-size: 1em;
+    text-decoration: none !important;
+    transition: transform .2s cubic-bezier(.175,.885,.32,1.275);
+    &:hover {
+        transform: scale(1.3);
+    }
+}
+
+#submitForm{
+  float: left;
+
+}
 
 #header {
     position: relative;
@@ -57,7 +78,7 @@
         max-height: 100%;
         height: 100vh;
         width: 100vw;
-        overflow:hidden;
+        overflow: hidden;
         width: 100%;
 
 
@@ -134,10 +155,13 @@
             margin-bottom: 0px;
         }
     }
+    .virtualbutton{
+      visibility: hidden;
+    }
 }
 
 @media screen and (max-width: $breakpoint-mobile-flipped) {
-    
+
     #header {
         margin-top: 0;
     }
