design bug Frontpage fixed

--- a/src/components/FrontButtons/index.scss
+++ b/src/components/FrontButtons/index.scss
@@ -6,6 +6,7 @@
     display: inline-block;
     margin: 0px;
     padding: 0px;
+    margin-left: 20px;
     background-color: #FFFFFF;
     color: #000000;
     border-radius: 5px;
