--- a/src/components/FrontButtons/index.scss
+++ b/src/components/FrontButtons/index.scss
@@ -1,6 +1,11 @@
 @import '../../styles/variables';
 
-.virtualbutton {
+.front-buttons {
+  display: flex;
+  justify-content: space-between;
+}
+
+.virtual-button {
     width: 220px;
     height: 60px;
     display: inline-block;
@@ -15,9 +20,4 @@
     &:hover {
         transform: scale(1.3);
     }
-}
-
-#submitForm1{
-  float: left;
-
 }
