Post fair updates

--- a/src/layouts/CompetitionPage/index.scss
+++ b/src/layouts/CompetitionPage/index.scss
@@ -32,6 +32,10 @@
 	.armada-competition-code {
 		font-size: 10pt;
 	}
+
+	.info-border-box {
+		border: 2px solid $grape;
+	}
 }
 
 @media screen and (max-width: $breakpoint-mobile-flipped) {
