change path to image

--- a/src/layouts/DiversityPage/index.scss
+++ b/src/layouts/DiversityPage/index.scss
@@ -22,7 +22,7 @@
 }
 
 .diversity-day {
-    background-image: url('/assets/diversity-blur.jpg');
+    background-image: url('/assets/diversity/diversity-blur.jpg');
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
