--- a/src/components/FAQExhibitors/index.scss
+++ b/src/components/FAQExhibitors/index.scss
@@ -2,76 +2,35 @@
 @import '../../styles/_variables';
 @import "../../styles/_fonts";
 
-
-  .application-section {
-      text-align: center;
-      margin-bottom: 50px;
-  }
-
-  button {
-    -webkit-appearance: none;
-    font-family: $font-regular;
-    font-size: 17px;
-    height: 50px;
-    border-radius: 25px;
-    padding-left: 25px;
-    padding-right: 25px;
-    min-width: 120px;
-    cursor: pointer;
-    font-weight: bold;
-    border: none;
-    background-color: $melon;
-    color: white;
-    box-shadow: 0 2px 1px -1px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
-
-    a {
-    color: $text-color-light;
-    font-family: $font-regular;
-    }
-  }
-
-  button:not([disabled]):hover {
-    -webkit-transform: scale(1.01);
-    -ms-transform: scale(1.01);
-    -o-transform: scale(1.01);
-    transform: scale(1.01);
-  }
-
-  button[disabled] {
-    background-color: $grape;
-    box-shadow: none;
-    cursor: not-allowed;
-  }
-  .rolelist {
-    h1,h2,h3,h4,h5{
-    text-align: left;
-    margin-bottom: 2%;
-    }
-
-  .apply-section{
-    margin:auto;
-    text-align: center;
-    background: white;
-    padding: 1em;
-    border-bottom: solid $text-color-light;
-    border-width: thin;
-  }
-
-.role-header{
+.faq-header{
     cursor: pointer;
     display: flex;
     flex-direction: row;
 }
 
-.role-header-left{
-    width: 90%;
-    margin-top: 2%;
-    margin-bottom: 2%;
+.section-header{
+    margin-bottom: 1em;
+    margin-top: 0.5em;
 }
-.role-header-right{
+
+.subsection-title{
+    font-size: 1.5em;
+    text-align: left;
+    text-decoration: underline;
+    color: rgba($grape,0.7);
+}
+
+.faq-header-left{
+    width: 90%;
+    margin-top: 1em;
+}
+
+.question-title{
+    text-align: left;
+}
+
+.faq-header-right{
     width: 10%;
-    z-index: -1;
-    text-align: right;
 }
 
 .arrow-icon{
@@ -79,7 +38,8 @@
     transition: transform 0.35s ease-in-out;
     font-size: 40px;
     color: $melon;
-    line-height: 100%;
+    line-height: 10%;
+    margin-right: 1em;
 }
 .collapsed-arrow{
     transform: rotate(90deg);
@@ -88,10 +48,21 @@
     transform: rotate(270deg);
 }
 
-.role-description{
+.faq-description{
     overflow: hidden;
     transition: max-height 0.35s ease-in-out;
-    margin-bottom: 2%;
+    text-align: left;
+    margin-right: 1.2em;
+    border-radius: 0px 0px 10px 10px;
+    border-style: solid none none none;
+    border-color: $melon;
+    border-width: thin;
+}
+
+.question-text{
+    margin-left: 1em;
+    margin-right: 1em;
+    width: 90%;
 }
 
 .collapsed {
@@ -100,15 +71,4 @@
 
 .expanded {
     max-height: 900px;
-}
-
-.group-header {
-    margin-top: 2em;
-}
-
-.groups{
-    margin-top: -2em;
-}
-
-
 }
