Diversity page update

--- a/src/layouts/DiversityPage/index.scss
+++ b/src/layouts/DiversityPage/index.scss
@@ -11,6 +11,11 @@
         color: $diversity;
         font-weight: bold;
     }
+    img {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+    }
 
 
 }
