--- a/src/components/Navbar/index.scss
+++ b/src/components/Navbar/index.scss
@@ -14,7 +14,7 @@
   font-family: $font-title;
   font-size: 95%;
   letter-spacing: 1.4px;
-  text-transform: uppercase;
+  //text-transform: uppercase;
 
   >.hidden {
       display: none;
@@ -38,7 +38,6 @@
 
       a {
         display: inline-block;
-        border-right: 1px #fff solid;
         text-decoration: none;
         transition: color 0.4s;
         color: $text-color-light;
@@ -60,7 +59,6 @@
       // TODO: repeating codeblock, improve this
         .dropdownParent {
         display: inline-block;
-        border-right: 1px #fff solid;
         text-decoration: none;
         transition: color 0.4s;
         color: $text-color-light;
