--- a/src/components/FunFact/index.scss
+++ b/src/components/FunFact/index.scss
@@ -5,6 +5,7 @@
 .flex-container {
     display: flex;
     justify-content: center;
+
   }
 
 .fact-box {
@@ -68,13 +69,14 @@ q:after  { content: close-quote; }
     border-radius: 10px;
     padding: 20px 20px;
     margin-top: 20px; 
+    margin-bottom: 20px;
 }
 .diversityFunFact{
     background-color: rgb(45,45,45);
     color: $diversity;
     border-radius: 10px;
     padding: 20px 20px;
-    margin-top: 20px; 
+    margin-bottom: 20px;
 }
 .fact-header {
     text-transform: uppercase;
