--- a/src/components/EmailForm/index.scss
+++ b/src/components/EmailForm/index.scss
@@ -1,4 +1,5 @@
 @import "../../styles/_fonts";
+@import "../../styles/global.scss";
 
 .container {
     justify-content: center;
@@ -36,9 +37,24 @@ textarea {
 }
 
 .sendButton {
-    justify-content: center;
-    margin-top: 1em;
-    font-size: $body-font-size;
+    -webkit-appearance: none;
+    font-family: $font-regular;
+    font-size: 17px;
+    height: 50px;
+    border-radius: 25px;
+    padding-left: 25px;
+    padding-right: 25px;
+    min-width: 120px;
+    cursor: pointer;
+    font-weight: bold;
+    border: none;
+    background-color: $melon;
+    color: white;
+    box-shadow: 0 2px 1px -1px rgba(0, 0, 0, 0.2),
+        0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+    outline: none;
+    text-align: center;
+    padding-top: 12px;
 }
 
 .contactTitle {
