--- a/src/components/Modal/index.scss
+++ b/src/components/Modal/index.scss
@@ -33,10 +33,8 @@
   margin: auto;
   top: 0;
   width: 100%;
-  //border-radius: 5px;
-  background: white; //rgba(255, 255, 255, 0.9);
-  
-  //padding-bottom: 1em;
+  background: white;
+
 }
 .shade {
   position: fixed;
