--- a/src/components/Navbar/index.scss
+++ b/src/components/Navbar/index.scss
@@ -57,7 +57,6 @@
       }
 
         .dropdownParent {
-        display: inline-block;
         text-decoration: none;
         transition: color 0.4s;
         color: $text-color-light;
@@ -73,6 +72,9 @@
       } 
 
       .hoverWeb {
+        position: relative;
+        display: inline-block;
+
         &:hover {
         color: $melon !important;
         cursor: pointer;
@@ -178,9 +180,8 @@
 
 .dropdown {
   position: relative;
-  display: inline-block;
+  display: block;
 }
-
 
 .dropdown-content {
   display: none;
