--- a/src/components/Modal/index.scss
+++ b/src/components/Modal/index.scss
@@ -26,6 +26,8 @@
   bottom: 0;
   left: 0;
   overflow-y: scroll;
+  height: 100vh;
+ 
 }
 .popup {
   position: relative;
@@ -34,6 +36,8 @@
   top: 0;
   width: 100%;
   background: white;
+  height: 100%;
+   border: 3px solid red;
 
 }
 .shade {
