green background menubar fix

--- a/src/components/VerticalTimeline/index.scss
+++ b/src/components/VerticalTimeline/index.scss
@@ -25,11 +25,11 @@
     display: none;
      }
 
-.active{
-   background-color: $melon!important;
+.act{
+   background-color: $melon;
 }  
-.nactive{
-   background-color: gray!important;
+.nact{
+   background-color: gray;
 }  
 
 @media screen and (max-width: $breakpoint-mobile-flipped) {
