--- a/src/components/ConceptVisualization/index.scss
+++ b/src/components/ConceptVisualization/index.scss
@@ -30,10 +30,10 @@
 
     }
  }
-.active{
+.act{
    background-color: $melon;
 }
-.nactive{
+.nact{
    background-color: gray;
 }
 @media screen and (max-width: $breakpoint-mobile-flipped) {
