--- a/src/components/Modal/index.scss
+++ b/src/components/Modal/index.scss
@@ -26,8 +26,6 @@
   bottom: 0;
   left: 0;
   overflow-y: scroll;
-  height: 100vh;
- 
 }
 .popup {
   position: relative;
@@ -35,10 +33,10 @@
   margin: auto;
   top: 0;
   width: 100%;
-  background: white;
-  height: 100%;
-   border: 3px solid red;
-
+  //border-radius: 5px;
+  background: white; //rgba(255, 255, 255, 0.9);
+  
+  //padding-bottom: 1em;
 }
 .shade {
   position: fixed;
@@ -113,7 +111,7 @@
   }
 
   .modalinfo{
-    padding: 1em 10px;
+    padding: 2em 0em 2em 0em;
   }
   .modal-property{
     display: flex;
@@ -159,9 +157,10 @@
 
   .modal-property-event{
     display: flex;
-    flex-direction: column;
-    padding: 1em 0em 1em 10em;
+    // flex-direction: column;
+    padding: 1em 0em 2em 0em;
     align-self: center;
+    justify-content: center;
   }
   .modal-property-event .icon{
     width: 25px;
@@ -172,6 +171,7 @@
     align-items: center;
     display: flex;
     flex-direction: row;
+    padding-right: 10px;
     //margin: 0.15em 0em;
   }
   .modal-property-event p{
@@ -270,10 +270,11 @@ a:hover {
     }
   }
   .modalcontent {
-  
+    
     .modal-container {
       display: block;
       height: auto;
+      
     }
     .modal-flex-1 {
       position: relative;
