--- a/src/components/Navbar/index.scss
+++ b/src/components/Navbar/index.scss
@@ -93,19 +93,15 @@
   #navbar{
 				overflow: hidden;
         position: absolute;
-
-        .topNav {
-          position: absolute;
-          top: 0;
-          left: 0;
-          width: 100%;
-          height: 3em;
-          background-color: $licorice;
-        }
+        background-color: $licorice;
 
         .menu-wrapper {
             width: 100%;
             padding-top: 0;
+            -webkit-backdrop-filter: blur(10px);
+	          backdrop-filter: blur(10px);
+            padding-bottom: 0;
+            margin-bottom: 0;
 
             &.visible {
               .menu-hamburger {
@@ -119,6 +115,7 @@
                 display: block;
                 height: 1em;
                 padding-top: 0.5em;
+                padding-bottom: 0.5em;
             }
 
             .menu {
@@ -129,8 +126,7 @@
                 justify-content: space-evenly;
                 width: 100%;
                 margin-top: 3em;
-                -webkit-backdrop-filter: blur(10px);
-	              backdrop-filter: blur(10px);
+                
 
                 @media screen and (max-width: $breakpoint-mobile) {
                   height: 100vh;
