--- a/src/components/Navbar/index.scss
+++ b/src/components/Navbar/index.scss
@@ -93,29 +93,31 @@
   #navbar{
 				overflow: hidden;
         position: absolute;
-        background-color: $licorice;
+
+        .banner-container {
+          display: flex;
+          flex-direction: column;
+        }
 
         .menu-wrapper {
             width: 100%;
             padding-top: 0;
             -webkit-backdrop-filter: blur(10px);
 	          backdrop-filter: blur(10px);
-            padding-bottom: 0;
-            margin-bottom: 0;
+            padding-bottom: 1em;
+
 
             &.visible {
               .menu-hamburger {
                 position: absolute;
                 right: 0;
+                height: 0;
               }
             }
 
             .menu-hamburger {
                 pointer-events: all;
                 display: block;
-                height: 1em;
-                padding-top: 0.5em;
-                padding-bottom: 0.5em;
             }
 
             .menu {
@@ -163,6 +165,7 @@
         }
 
         .menu-wrapper.hidden {
+          padding: 1em;
             background-color: $licorice;
             text-align: center;
             display: inline-block;
