--- a/src/components/EmailForm/index.scss
+++ b/src/components/EmailForm/index.scss
@@ -3,6 +3,7 @@
 
 .container {
     justify-content: center;
+    width: 100%;
 }
 
 .formContainer {
@@ -34,6 +35,7 @@ textarea {
     resize: none;
     font-family: $font-regular;
     font-size: $body-font-size;
+    width: 100%;
 }
 
 .sendButton {
