--- a/src/components/SustainabilityInterviews/index.scss
+++ b/src/components/SustainabilityInterviews/index.scss
@@ -22,6 +22,12 @@ display: unset;
   //  visibility: hidden;
   display: none;
 }
+
+.sustainability-interview-flex{
+    display: flex;
+    flex-direction: row;
+    overflow: hidden;
+}
 .interviewee {
     display: flex;
     align-items: flex-start;
