added exhibitor competition winners, removed old text and fixed styling on phone for competition page

--- a/src/layouts/CompetitionPage/index.scss
+++ b/src/layouts/CompetitionPage/index.scss
@@ -33,8 +33,8 @@
 }
   
   @media screen and (max-width: $breakpoint-mobile-flipped) {
-	.info-container {
-	  padding: 3em 1em;
+	.competition-container {
+	  padding: 3em 2em;
 	}
   }
 
