--- a/src/components/SustainabilityInterviews/index.scss
+++ b/src/components/SustainabilityInterviews/index.scss
@@ -2,36 +2,18 @@
 @import '../../styles/_variables';
 
 
-#a{
-//visibility: visible;
-display: unset;
-}
-#b{
- //   visibility: hidden;
- display: none;
-}
-#c{
- //   visibility: hidden;
- display: none;
-}
-#d{
- //   visibility: hidden;
- display: none;
-}
-#e{
-  //  visibility: hidden;
-  display: none;
-}
-
 .sustainability-interview-flex{
     display: flex;
-    flex-direction: row;
-    overflow: hidden;
+    flex-direction: column;
+    overflow-y: auto;
+    height: 100vh;
+    width: 100%;
 }
 .interviewee {
     display: flex;
     align-items: flex-start;
     padding: 0.5em 0;
+    margin-top: 5%;
 
     @media screen and (max-width: $breakpoint-mobile-flipped) {
         flex-direction: column;
