Added initial buttons to home page and Updated logo button to link to home

--- a/src/components/Jumbotron/index.scss
+++ b/src/components/Jumbotron/index.scss
@@ -95,7 +95,7 @@
     width: 50%;
     top: 60%;
 
-    img {
+    #logo-container-img {
         max-height:90%;
         max-width: 50%;
         align-self: center;
